# hobby-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pants.toml  pyproject.toml
docker-compose/: .gitignore
docker-compose/db_init/: 01-create-pokemon-db.sql
src/pokemon_api/: alembic.ini  config.py  dependencies.py  example.env  main.py
src/pokemon_api/alembic/: env.py
src/pokemon_api/alembic/versions/: 2024-09-23T15-42-39-a74367808480.py  2024-09-29T20-43-00-955b651fd953.py
src/pokemon_api/models/: pokemon.py
src/pokemon_api/routers/: api.py  pokemon.py
src/python/: BUILD
src/python/webscrapers/output/: pokemon.json
src/python/webscrapers/spiders/: test.py
src/scripts/: load_pokemon_into_database.py
src/scripts/webscrapers/output/: pokemon.json
src/scripts/webscrapers/spiders/: pokemon.py  test.py
src/shared/database/: config.py  database.py  exceptions.py
src/shared/logging/: logging.py
src/webscrapers/: settings.py
tests/: conftest.py
tests/pokemon_api/: conftest.py
tests/pokemon_api/routers/: test_pokemon.py
tests/shared/database/: test_config.py  test_database.py
